--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.backGround{
+    background: linear-gradient(to top, #1F74B7, #FAFAFA);
+}
