--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .backGround{
     background: linear-gradient(to top, #1F74B7, #FAFAFA);
+}
+
+.toolbar {
+    font-family: 'Open Sans', serif;
+    font-weight: 600;
+    font-size: 16px;
+}
+.toolbar a:hover {
+        color: #1F74B7;
+}
+h1 {
+    font-family: 'Roboto', serif;
+    font-weight: 700;
+    font-size: 36px;
+    color: #151515
+}
+.btn{
+    font-family: 'Open Sans', serif;
+    font-weight: 600;
+    font-size: 16px;
+}
+.btn:hover {
+    background-color: #1F74B7;
 }
