--- a/src/index.css
+++ b/src/index.css
@@ -23,14 +23,38 @@ h1 {
     font-size: 36px;
     color: #151515
 }
-.btn{
-    font-family: 'Open Sans', serif;
+h3 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    color: #151515;
+}
+.description {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    color: #797575;
+}
+.price {
+    font-family: 'Open Sans';
+    font-style: normal;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 18px;
+    color: #151515;
 }
-.btn:hover {
-    background-color: #1F74B7;
+.oldPrice {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 19px;
+    /* identical to box height, or 136% */
+    text-decoration-line: line-through;
+    color: #797575;
 }
+
 .item-card {
     display: flex;
     width: 400px;
@@ -47,6 +71,7 @@ h1 {
     background: #FFFFFF;
     border-radius: 0 10px 10px 0;
     position: relative;
+    align-items: stretch;
 }
 .item-card-description::after {
     content: "";
@@ -58,4 +83,21 @@ h1 {
     background: transparent;
     border-radius: 50%;
     box-shadow: -10px -10px 0 #FFFFFF;
+}
+
+.tooltip {
+    display: flex;
+    width: 257px;
+    height: 57px;
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    background: #FFFFFF;
+    border: 1px solid #1F74B7;
+    border-radius: 6px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    color: #151515
 }
