--- a/src/index.css
+++ b/src/index.css
@@ -101,3 +101,12 @@ h3 {
     justify-content: center;
     color: #151515
 }
+
+.navBar {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 19px;
+    color: #151515;
+}
